--- a/styles.css
+++ b/styles.css
@@ -21,17 +21,106 @@ html {
 body {
     height: 100vh;
     width: 100vw;
+    font-family: "Inter", sans-serif;
+    background-color: var(--Grey-900-);
+    color: var(--White);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-.attribution {
-    font-size: 11px;
-    text-align: center;
-}
-.attribution a {
-    color: hsl(228, 45%, 44%);
+main {
+    width: 38.4rem;
+    height: 61.1rem;
+    background-color: var(--Grey-800);
+    padding: 4rem;
+    border-radius: 1.2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 img {
-    width: 88px;
-    height: 88px;
+    width: 8.8rem;
+    height: 8.8rem;
+    margin-bottom: 2.4rem;
+    border-radius: 50%;
+}
+
+h1,
+address,
+p,
+a {
+    line-height: 150%;
+    letter-spacing: 0px;
+}
+
+h1 {
+    font-size: 2.4rem;
+    font-weight: bold;
+    margin-bottom: 0.4rem;
+}
+
+address {
+    color: var(--Green);
+    font-style: normal;
+    font-size: 1.4rem;
+    font-weight: bold;
+    margin-bottom: 2.4rem;
+}
+
+q {
+    font-size: 1.4rem;
+    margin-bottom: 2.4rem;
+}
+
+ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    list-style: none;
+    height: 100%;
+    width: 100%;
+}
+
+li {
+    background-color: var(--Grey-700);
+    margin-bottom: 1.6rem;
+    border-radius: 0.8rem;
+    font-size: 1.4rem;
+    font-weight: bold;
+}
+
+li a {
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
+    color: inherit;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    padding: 1.2rem;
+}
+
+li:last-child {
+    margin-bottom: 0;
+}
+
+li:hover {
+    background-color: var(--Green);
+    color: var(--Grey-700);
+}
+
+footer {
+    font-size: 1.4rem;
+    text-align: center;
+    padding-bottom: 1.2rem;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    left: 0;
+}
+footer a {
+    color: var(--Green);
 }
