--- a/styles.css
+++ b/styles.css
@@ -101,13 +101,15 @@ li a {
     width: 100%;
     height: 100%;
     padding: 1.2rem;
+    border-radius: 0.8rem;
 }
 
 li:last-child {
     margin-bottom: 0;
 }
 
-li:hover {
+li a:hover,
+li a:focus {
     background-color: var(--Green);
     color: var(--Grey-700);
 }
